Remove some warnings